Replace defunct svn URLs with macos-powerpc

--- a/darwinup/darwinup.1
+++ b/darwinup/darwinup.1
@@ -240,7 +240,7 @@ $ darwinup uninstall superseded
 .It Uninstall several archives by serial, the oldest one, and one named myroot
 $ darwinup uninstall 9 16 myroot oldest
 .It Install a root from src.macosforge.org
-$ darwinup install http://src.macosforge.org/Roots/10D573/zlib.root.tar.gz
+$ darwinup install http://macos-powerpc.org/darwinbuild/Roots/10D573/zlib.root.tar.gz
 .El
 .Sh SEE ALSO
 .Xr rsync 1 ,
